Added Products Page 12102024 10:00

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Leading AI solutions provider specializing in Computer Vision, AR/VR, Healthcare AI, and Enterprise Software Development. Transform your business with intelligent solutions.">
+    <meta name="keywords" content="AI solutions, Computer Vision, Artificial Intelligence, AR/VR, Healthcare AI, Enterprise Software, Machine Learning, Deep Learning, Real-time Analytics, AI Integration, Computer Vision Solutions, AI Development Company, Bangalore AI Company">
+    
+    <!-- Open Graph / Social Media Tags -->
+    <meta property="og:title" content="IVIS LABS - Intelligent Vision Solutions">
+    <meta property="og:description" content="Transform your business with cutting-edge AI and Computer Vision solutions">
+    <meta property="og:image" content="">
+    
+    <!-- Additional SEO Tags -->
+    <link rel="canonical" href="https://ivislabs.com">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>IVIS LABS</title>
   </head>
